# code_documentor

backend/: .env.example  .gitignore  package.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/parsers/: dependency_analyzer.py  javascript_parser.py  manager.py  python_parser.py
backend/app/services/: analysis_service.py
backend/app/utils/: file_walker.py  github_cloner.py
backend/parsers/: javascript_parser.js
backend/tests/: test_dependency_analyzer.py  test_javascript_parser.py  test_main.py  test_python_parser.py
backend/tests/ai/: test_gemini_client.py
frontend/: .gitignore  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/components/: CodeGraph.tsx  DocumentationViewer.tsx  GraphControls.tsx  LoadingSpinner.tsx  RepoForm.tsx  StatsPanel.tsx  icons.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  input.tsx  tabs.tsx
frontend/src/lib/: api-client.ts  layout.ts  store.ts  types.ts
